--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
       "gulp-webpcss": "latest",
       "gulp-zip": "latest",
       "sass": "latest",
-      "swiper": "latest",
+      "swiper": "^8.3.1",
       "vinyl-ftp": "latest",
       "webp-converter": "2.2.3",
       "webpack": "latest",
